# algebraic

./: AlgebraicReal.cpp  AlgebraicReal.h  AlgebraicRealTest.cpp  AlgebraicTest.cpp  AliasExtended.h  AliasExtendedTest.cpp  AliasMonomial.h  AliasMonomialTest.cpp  AliasRational.h  AliasRationalTest.cpp  CMakeLists.txt  Comparable.cpp  Equatable.cpp  Extended.cpp  Extended.h  ExtendedTest.cpp  Fractional.cpp  Indetermined.h  IndeterminedTest.cpp  InfinityAlias.h  InfinityAliasTest.cpp  Integer.cpp  IntegerUtils.h  IntegerUtilsTest.cpp  Makefile  MonomialAlias.h  MonomialAliasTest.cpp  Number.cpp  PolynomialRemainderSequence.h  PolynomialRemainderSequenceTest.cpp  README.md  Rational.cpp  Rational.h  RationalTest.cpp  Showable.cpp  SturmSequence.cpp  SturmSequence.h  SturmSequenceTest.cpp  SylvesterMatrix.h  SylvesterMatrixTest.cpp  (+4 more)
include/: AlgebraicReal.h  AliasExtended.h  AliasMonomial.h  AliasRational.h  ComputableReal.h  Extended.h  Infinity.h  IntegerUtils.h  Interval.h  IntervalRational.h  MaybeBool.h  MaybeOrdering.h  Ordering.h  PolynomialRemainderSequence.h  Rational.h  SturmSequence.h  SylvesterMatrix.h  UnivariatePolynomial.h
lib/: AlgebraicReal.cpp  (+5 more)
test/: AlgebraicRealTest.cpp  AlgebraicTest.cpp  AliasExtendedTest.cpp  AliasMonomialTest.cpp  AliasRationalTest.cpp  CMakeLists.txt  ComputableRealTest.cpp  ExtendedTest.cpp  IntegerUtilsTest.cpp  IntervalRationalTest.cpp  IntervalTest.cpp  MaybeBoolTest.cpp  MaybeOrderingTest.cpp  PolynomialRemainderSequenceTest.cpp  RationalTest.cpp  SturmSequenceTest.cpp  SylvesterMatrixTest.cpp  UnivariatePolynomialTest.cpp
(+5 files in other folders)
